<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RideDataHandler">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mod_data_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:gravity="center"
                android:text="DatePlaceholder"
                android:textSize="32sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/edit_date_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:text="@string/edit_date_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mod_data_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:gravity="center"
                android:text="TimePlaceholder"
                android:textSize="28sp" />

            <Button
                android:id="@+id/edit_time_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:text="@string/edit_time_button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mod_data_container_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mod_data_distance_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:gravity="left"
                android:text="@string/title_distance"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/mod_data_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:inputType="textPersonName"
                android:text="Name"
                android:textSize="28sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/error_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:gravity="right"
            android:text="@string/error_not_number"
            android:textColor="#F70000"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/mod_data_container_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mod_data_speed_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:text="@string/title_speed"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/mod_data_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:inputType="textPersonName"
                android:text="Name"
                android:textSize="28sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/error_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:gravity="right"
            android:text="@string/error_not_number"
            android:textColor="#F70000"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/mod_data_container_cadence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mod_data_cadence_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:text="@string/title_cadence"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/mod_data_cadence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:inputType="textPersonName"
                android:text="Name"
                android:textSize="28sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/error_cadence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:gravity="right"
            android:text="@string/error_not_number"
            android:textColor="#F70000"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mod_data_comment_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_comment"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/mod_data_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                android:textSize="28sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/error_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/error_comment_limit"
            android:textColor="#F70000"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/mod_data_container_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mod_data_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Button" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>