<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewRide">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/view_data_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:text="DatePlaceholder"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_data_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:text="TimePlaceholder"
            android:textSize="28sp" />

        <LinearLayout
            android:id="@+id/view_data_container_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/view_data_distance_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left"
                android:text="@string/title_distance"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/view_data_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:inputType="textPersonName"
                android:text="Name"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_data_container_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/view_data_speed_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/title_speed"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/view_data_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:inputType="textPersonName"
                android:text="Name"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_data_container_cadence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/view_data_cadence_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/title_cadence"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/view_data_cadence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:inputType="textPersonName"
                android:text="Name"
                android:textSize="28sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/view_data_comment_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/title_comment"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/view_data_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="textPersonName"
            android:text="Name"
            android:textSize="28sp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>